Renamed eflat to engine, uppercased filenames and class names.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 #OBJS specifies which files to compile as part of the project
-OBJS = main.cpp App* eflat/*
+OBJS = main.cpp App* engine/*
 
 #CC specifies which compiler we're using
 CC = g++
